Several small changes to styling. - Added a few style sizes to the stylesheets. - Re-worked the `about` page completely - Corrected a few minor UI/layout problems I saw along the way.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -9,6 +9,16 @@ $size-big:    26px
 $size-medium: 14px
 $size-small:  12px
 
+.size-big
+  font-size: $size-big
+.size-medium
+  font-size: $size-medium
+.size-small
+  font-size: $size-small
+
+pre
+  font-size: $size-small
+
 body
   color: $color-light-grey
   font-family: 'PT Mono', sans-serif
